# llm-projects

./: .env_example  .gitignore  README.md
job-scraper/: gradio_app.py  main.py  prompts.py  pyproject.toml  requirements.txt  schemas.py  scraper.py  utils.py
job-scraper/app/: schemas.py  scraper.py
llm-apps/job-scraper/: README.md  gradio_app.py  pyproject.toml  run.py
llm-apps/job-scraper/app/: Dockerfile  main.py  prompts.py  prompts1.py  scraper1.py
llm-apps/quiz-generator/: pyproject.toml
llm-apps/quiz-generator/alembic/: env.py  script.py.mako
llm-apps/quiz-generator/alembic/versions/: 8839071610bb_add_new_fields.py  fa66ab6b4b48_add_topic_to_quiz.py
llm-apps/quiz-generator/app/: database.py  main.py  schemas.py
llm-apps/quiz-generator/app/templates/: base.html  create_quiz.html  quiz_detail.html
llm-apps/story-generator/: README.md  alembic.ini  pyproject.toml
llm-apps/story-generator/alembic/: env.py
llm-apps/story-generator/app/: database.py  main.py  prompts.py  schemas.py
llm-apps/story-generator/app/templates/: create.html  home.html  list.html
mcps/exchange-rate/: exchange_rate.py  pyproject.toml
mcps/frankfurter/: README.md  frankfurter.py  pyproject.toml
mcps/weather/: pyproject.toml  weather.py
quiz-generator/: README.md  alembic.ini  pyproject.toml
quiz-generator/alembic/versions/: d6176dba237e_initial_migration.py
quiz-generator/app/: Dockerfile  database.py  main.py  models.py  prompts.py  requirements.txt  schemas.py
quiz-generator/app/templates/: base.html  create_quiz.html  home.html  list_quizzes.html  quiz_detail.html
rags/simple-summaries-recommendation/: requirements.txt
simple-summaries-recommendation/: main.py
story-generator/: pyproject.toml
story-generator/alembic/versions/: 893ff801e51f_add_story_field.py
story-generator/app/: main.py  models.py  prompts.py  requirements.txt
story-generator/app/templates/: create.html  detail.html  home.html  list.html
