[project]
name = "quiz-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.42.83",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "fastapi-login>=1.10.3",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "python-decouple>=3.8",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.38",
    "starlette>=1.0.0",
    "uvicorn>=0.43.0",
]
